test/test-files/analyzer/if-stmts/error-if-condition-bool/exception.out
Semantic error in : ./test-files/analyzer/if-stmts/error-if-condition-bool/source.spice:2:8:
Condition must be bool: If condition must be of type bool

2  if 7 {
      ^